# jblox

./: .gitignore  .gitmodules  README.md
clox/: CMakeLists.txt
clox/include/clox/: buffer.h  context.h  debug.h  defs.h  fmt.h  gpa.h  io.h  io_types.h  logging.h  memory.h  os.h  os_types.h  string.h  syscalls.h
clox/src/: io.c  lox.c  main.c  os.c  start.c
clox_tests/: church.lox  classes.lox  closures.lox  controlflow.lox  fib.lox  functions.lox  gvars.lox  inheritance.lox  initperf.lox  methodperf.lox  readloop.lox  run_tests.bat  run_tests.sh  scopes.lox
cpplox/: .nvimrc  CMakeLists.txt
cpplox/include/cpplox/: defs.hpp  lox.hpp  semantic.hpp  tokens.hpp  value.hpp
cpplox/metaprogram/: main.cpp
cpplox/src/: main.cpp
cpplox/templates/: version.hpp
cpplox_tests/: binding.lox  classes.lox  closures.lox  controlflow.lox  inner.lox  intrinsics.lox  lambdas.lox  objects.lox  run_tests.bat  run_tests.sh  time.lox  variables.lox
tests/: clambdas.lox  classes.lox  closures.lox  comments.lox  fib.lox  imports.lox  inner.lox  mixins.lox  modules.lox  objects.lox  run_tests.bat  run_tests.sh  shadowing.lox
tests/lib/: math.lox
